// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateEngine > should add imports to top of file 1`] = `
"import React from 'react';
import type {FC} from 'react';

export const Component = () => {
  return null;
};
"
`;

exports[`TemplateEngine > should handle lists with all items excluded 1`] = `
"const dependencies = {
  react: '^18.0.0',
  lodash: '^4.17.21',
};

const items = ['item1', 'item3'];
"
`;

exports[`TemplateEngine > should handle lists with conditional items 1`] = `
"const dependencies = {
  react: '^18.0.0',
  'react-router': '^6.0.0',
  lodash: '^4.17.21',
};

const items = ['item1', 'item2', 'item3'];
"
`;

exports[`TemplateEngine > should include entire files 1`] = `
"export const helper = () => 'imported';

export const main = () => helper();
"
`;
